# human-agent-collab

./: .dockerignore  .env.example  .env.manual.template  .gitignore  README.docker-dev.md  README.md  backend.dev.Dockerfile  check_mturk_assignments.py  check_prolific_assignments.py  deploy-prod.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.rds.yml  docker-compose.yml  env.template  frontend.dev.Dockerfile  frontend.env.template  frontend.prod.Dockerfile  package-lock.json  pyproject.toml  quick-start.ps1  sample_ecl.yaml  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: publish-docker.yml
backend/: .dockerignore  .gitignore  Dockerfile  agent_runner.py  agent_tools.py  app.py  daytrader_game_engine.py  ecl_action_engine.py  ecl_parser.py  ecl_ui_generator.py  ecl_validator.py  essayranking_game_engine.py  functions.py  game_engine.py  game_engine_factory.py  gunicorn.conf.py  hiddenprofile_game_engine.py  human_logger.py  migrate.py  model.py  mturk_service.py  pdf_utils.py  requirements.txt  sample_input_pairs.csv  session_statistics.py  wordguessing_game_engine.py
deployment/: .env.dev.template  .env.prod.template  README.docker-dev.md  backend.dev.Dockerfile  backend.prod.Dockerfile  deploy-prod.sh  docker-compose.dev.yml  docker-compose.prod.yml  frontend.prod.Dockerfile  nginx.conf  quick-start.ps1  quick-start.sh
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
user_tutorial/: run_locally.md  run_on_cloud.md
vue-app/: README.md  index.html  package.json  vite.config.js
(+122 files in other folders)
